JSAI/error/src/test/resources/init/j-array01.js
x = Array("string")
print(x.length)
print(x[0])

x = Array(null)
print(x.length)
print(x[0])

x = Array(undefined)
print(x.length)
print(x[0])

x = [0]
print(x.length)
print(x[0])

x = ["string"]
print(x.length)
print(x[0])

x = [null]
print(x.length)
print(x[0])

x = [undefined]
print(x.length)
print(x[0])
